[package]
name = "bilipan"
version = "0.1.0"
edition = "2018"

[dependencies]
png = "0.17.2"
clap = "3.0.0-beta.5"
reqwest = { version = "0.11.5", features = ["cookies", "multipart", "stream"] }
tokio = { version = "1.12", features = ["full"] }
chrono = "0.4.19"
toml = "0.5.8"
tokio-util = "0.6.8"
json = "0.12.4"
rand = "0.8.4"
futures = "0.3.17"
aes = "0.7.5"
regex = "1.5.4"